--- a/loginPage.html
+++ b/loginPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - Catalogue Premium</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <script src="jsModules/loginRequest.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
@@ -44,7 +45,7 @@
     </header>
 
     <main class="max-w-md mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <form class="bg-white rounded-xl shadow-md p-8 space-y-6">
+        <form class="bg-white rounded-xl shadow-md p-8 space-y-6" onsubmit="handleLoginRequest(event)">
             <div>
                 <label for="username" class="block text-sm font-medium text-gray-700 mb-2">Nom d'utilisateur</label>
                 <input type="text" id="username" name="username" required 
