--- a/signupPage.html
+++ b/signupPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription - Catalogue Premium</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <script src="jsModules/signupRequest.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
@@ -44,10 +45,10 @@
     </header>
 
     <main class="max-w-md mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <form class="bg-white rounded-xl shadow-md p-8 space-y-6">
+        <form class="bg-white rounded-xl shadow-md p-8 space-y-6" onsubmit="handSignUpRequest(event)">
             <div>
                 <label for="username" class="block text-sm font-medium text-gray-700 mb-2">Nom d'utilisateur</label>
-                <input type="text" id="username" name="username" required 
+                <input type="email" id="username" name="username" required 
                        class="w-full p-3 border-2 border-gray-200 rounded-lg focus:border-purple-500 focus:ring-2 focus:ring-purple-200 outline-none transition">
             </div>
 
@@ -67,8 +68,8 @@
                 </select>
             </div>
 
-            <button type="submit" 
-                    class="w-full btn-gradient text-white font-bold py-3 rounded-lg hover:opacity-90 transition">
+            <button  type="submit"
+                    class="w-full btn-gradient text-white font-bold py-3 rounded-lg hover:opacity-90 transition"  >
                 S'inscrire
             </button>
 
